# TestTaskWalletBalance

./: .env.example  .gitignore  Dockerfile  README.md  compose.observability.yaml  compose.yaml  pyproject.toml  req.txt
alembic/: env.py
alembic/versions/: 001_create_wallets_and_operations.py
app/: main.py
app/api/: exception_handlers.py  middleware.py
app/api/v1/: wallets.py
app/core/: config.py  logging.py  telemetry.py
app/db/: session.py
app/domain/: __init__.py  enums.py  exceptions.py
app/models/: models.py
app/repositories/: __init__.py  operation_repository.py  wallet_repository.py
app/schemas/: operation.py  wallet.py
app/seed/: constants.py
app/services/: operation_service.py  wallet_service.py
docs/: observability.md
observability/: alloy.config  loki.yaml  otel-collector.yaml
observability/grafana/provisioning/dashboards/: dashboards.yaml  wallet-api-red.json
observability/grafana/provisioning/datasources/: datasources.yaml
scripts/: entrypoint.sh  seed.py
tests/: conftest.py  test_concurrency.py  test_wallets.py
